--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>Gromo – Website Development for Your Business</title>
     <meta name="description" content="Gromo builds beautiful, responsive websites for shops, e-commerce, hotels, tea stalls, and more. Start your digital journey today." />
     <meta name="author" content="Gromo" />
-
+    
     <meta property="og:title" content="Gromo – Website Development for Your Business" />
     <meta property="og:description" content="Gromo builds beautiful, responsive websites for shops, e-commerce, hotels, tea stalls, and more. Start your digital journey today." />
     <meta property="og:type" content="website" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌐</text></svg>" />
+<link rel="icon" href="/lovable-uploads/ChatGPT-Image-Jul-15-2025-12_52_37-AM.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
