--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
 
   <body>
     <div id="root"></div>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SGS4EZQ00W"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-SGS4EZQ00W');
+</script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
