--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-9ZXZDXF75C"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TX8HXGX3M0"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-9ZXZDXF75C');
+  gtag('config', 'G-TX8HXGX3M0');
 </script>
   </head>
 
