--- a/index.html
+++ b/index.html
@@ -18,20 +18,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 <!-- Google tag (gtag.js) -->
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-D9XRBNNTYZ"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VWK12RW9JF"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-D9XRBNNTYZ');
+  gtag('config', 'G-VWK12RW9JF');
 </script>
   </head>
 
   <body>
     <div id="root"></div>
-    <!-- Google tag (gtag.js) -->
+
 
     <script type="module" src="/src/main.tsx"></script>
   </body>
